--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -6,7 +6,7 @@
     height: auto;
     width: auto;
     margin-top: 10px;
-    z-index: +1;
+    z-index: 0;
 }
 
 .navbtn {
