--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ body {
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
+#root{
+	width:100%;
+	height:auto;
+}
+
 #container {
 	display: flex;
 	flex-direction: column;
@@ -22,11 +27,6 @@ body {
 
 	width: 100%;
 	height: 150vh;	
-}
-
-#root{
-	width:100%;
-	height:auto;
 }
 
 ::-webkit-scrollbar {
@@ -37,5 +37,5 @@ body {
 	width: 100%;
 	
 	position: absolute;
-	z-index: 0;
+	z-index: 0
   }
